# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  07 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fix some vlan/bridge/tap/neplugd/ifplugd interdependencies #107406.

  06 Oct 2005; Mike Frysinger <vapier@gentoo.org>:

    Tweak clock start/stop display to be clearer about behavior #105681.

  06 Oct 2005; Roy Marples <uberlord@gentoo.org>:

    Fixup IPv6 documentation and support, #108143.

  02 Oct 2005; Mike Frysinger <vapier@gentoo.org>:

    Add support for ROOT to rc-update script.

  01 Oct 2005; Mike Frysinger <vapier@gentoo.org>:

    Add support for running some features of rc-update as non-root.
    Patch by RiverRat #107775.

    Drop -a and keep -y from the forced fsck since -a and -y can't be used at 
    the same time #107812.

  23 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Add a note to conf.d/clock for people who dual boot with Windows.

    Touchup comments in conf.d/domainname to help clear confusion.

    Rework how we setup default rc variables in sbin/functions.sh to help
    keep users from doing stupid things and destroying their system.

  17 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Fix up support for NetBSD #106112 by Damian Florczyk.

    When doing a forced fsck, don't show title at startup (-T).

  16 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    iwconfig and wpa_supplicant now check to see if /proc/net/wireless exists
    before checking for extensions, #106036

  14 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    netplug module renamed to netplugd for consistency

    pppd module added, #53954 thanks to Alin Nastac

  14 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Need to source init-functions.sh to provid try() for halt.sh.

  13 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Don't mount ${svcdir} with -n since / is writable at that point.
